--- a/android/.gitignore
+++ b/android/.gitignore
@@ -1,9 +1,8 @@
-# add comment for app center
-# gradle-wrapper.jar
-# /gradlew
-# /gradlew.bat
+gradle-wrapper.jar
 /.gradle
 /captures/
+/gradlew
+/gradlew.bat
 /local.properties
 GeneratedPluginRegistrant.java
 
